
[TestLexLifetimeTokens/SingleLifetime - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:3},
            SourceID: 0,
        },
        Type:  42,
        Value: "a",
    },
}
---

[TestLexLifetimeTokens/MultipleLifetimes - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:3},
            SourceID: 0,
        },
        Type:  42,
        Value: "a",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:4},
            End:      ast.Location{Line:1, Column:11},
            SourceID: 0,
        },
        Type:  42,
        Value: "static",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:12},
            End:      ast.Location{Line:1, Column:15},
            SourceID: 0,
        },
        Type:  42,
        Value: "b1",
    },
}
---

[TestLexLifetimeTokens/LifetimeInTypeParameterList - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:2},
            SourceID: 0,
        },
        Type:  51,
        Value: "<",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:2},
            End:      ast.Location{Line:1, Column:4},
            SourceID: 0,
        },
        Type:  42,
        Value: "a",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:4},
            End:      ast.Location{Line:1, Column:5},
            SourceID: 0,
        },
        Type:  16,
        Value: ",",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:6},
            End:      ast.Location{Line:1, Column:8},
            SourceID: 0,
        },
        Type:  42,
        Value: "b",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:8},
            End:      ast.Location{Line:1, Column:9},
            SourceID: 0,
        },
        Type:  16,
        Value: ",",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:10},
            End:      ast.Location{Line:1, Column:11},
            SourceID: 0,
        },
        Type:  40,
        Value: "T",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:11},
            End:      ast.Location{Line:1, Column:12},
            SourceID: 0,
        },
        Type:  38,
        Value: ">",
    },
}
---

[TestLexLifetimeTokens/LifetimeAdjacentToType - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:4},
            SourceID: 0,
        },
        Type:  57,
        Value: "mut",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:5},
            End:      ast.Location{Line:1, Column:7},
            SourceID: 0,
        },
        Type:  42,
        Value: "a",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:8},
            End:      ast.Location{Line:1, Column:13},
            SourceID: 0,
        },
        Type:  40,
        Value: "Point",
    },
}
---

[TestLexLifetimeTokens/LifetimeUnionInsideParens - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:2},
            SourceID: 0,
        },
        Type:  66,
        Value: "(",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:2},
            End:      ast.Location{Line:1, Column:4},
            SourceID: 0,
        },
        Type:  42,
        Value: "a",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:5},
            End:      ast.Location{Line:1, Column:6},
            SourceID: 0,
        },
        Type:  67,
        Value: "|",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:7},
            End:      ast.Location{Line:1, Column:9},
            SourceID: 0,
        },
        Type:  42,
        Value: "b",
    },
    &parser.Token{
        Span: ast.Span{
            Start:    ast.Location{Line:1, Column:9},
            End:      ast.Location{Line:1, Column:10},
            SourceID: 0,
        },
        Type:  14,
        Value: ")",
    },
}
---

[TestParseLifetimeAnnotations/FnTypeAnnLifetimeParams - 1]
&ast.DeclStmt{
    Decl: &ast.VarDecl{
        Kind:    0,
        Pattern: &ast.IdentPat{
            Name:    "f",
            VarID:   0,
            TypeAnn: nil,
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 0,
            },
            inferredType: nil,
        },
        TypeAnn: &ast.FuncTypeAnn{
            LifetimeParams: {
                &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:11},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            TypeParams: nil,
            Params:     {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "p",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:16},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:21},
                                End:      ast.Location{Line:1, Column:26},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:18},
                                End:      ast.Location{Line:1, Column:20},
                                SourceID: 0,
                            },
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:21},
                            End:      ast.Location{Line:1, Column:26},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:34},
                        End:      ast.Location{Line:1, Column:39},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:31},
                        End:      ast.Location{Line:1, Column:33},
                        SourceID: 0,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:34},
                    End:      ast.Location{Line:1, Column:39},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Throws: nil,
            span:   ast.Span{
                Start:    ast.Location{Line:1, Column:8},
                End:      ast.Location{Line:1, Column:39},
                SourceID: 0,
            },
            inferredType: nil,
        },
        Init: &ast.IdentExpr{
            Name:      "ref",
            Namespace: 0,
            VarID:     0,
            Source:    nil,
            span:      ast.Span{
                Start:    ast.Location{Line:1, Column:42},
                End:      ast.Location{Line:1, Column:45},
                SourceID: 0,
            },
            inferredType: nil,
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:45},
            SourceID: 0,
        },
        InferredType: nil,
        provenance:   nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:45},
        SourceID: 0,
    },
}
---

[TestParseLifetimeAnnotations/FnLifetimeAndTypeParams - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "identity",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:12},
                SourceID: 0,
            },
        },
        VarID:   0,
        FuncSig: ast.FuncSig{
            LifetimeParams: {
                &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:15},
                        SourceID: 0,
                    },
                },
            },
            TypeParams: {
                &ast.TypeParam{
                    Name:       "T",
                    Constraint: nil,
                    Default:    nil,
                },
            },
            Params: {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "p",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:20},
                            End:      ast.Location{Line:1, Column:21},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:30},
                                    End:      ast.Location{Line:1, Column:31},
                                    SourceID: 0,
                                },
                            },
                            TypeArgs: {
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:27},
                                    End:      ast.Location{Line:1, Column:29},
                                    SourceID: 0,
                                },
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:30},
                                End:      ast.Location{Line:1, Column:31},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:30},
                            End:      ast.Location{Line:1, Column:31},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:43},
                            End:      ast.Location{Line:1, Column:44},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:40},
                            End:      ast.Location{Line:1, Column:42},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:43},
                        End:      ast.Location{Line:1, Column:44},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:43},
                    End:      ast.Location{Line:1, Column:44},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Throws: nil,
            Async:  false,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name:      "p",
                        Namespace: 0,
                        VarID:     0,
                        Source:    nil,
                        span:      ast.Span{
                            Start:    ast.Location{Line:1, Column:54},
                            End:      ast.Location{Line:1, Column:55},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:47},
                        End:      ast.Location{Line:1, Column:55},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:45},
                End:      ast.Location{Line:1, Column:57},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:57},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:57},
        SourceID: 0,
    },
}
---

[TestParseLifetimeAnnotations/FnImmutableLifetimeOnRef - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "ref",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
        },
        VarID:   0,
        FuncSig: ast.FuncSig{
            LifetimeParams: {
                &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:8},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 0,
                    },
                },
            },
            TypeParams: nil,
            Params:     {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "p",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:12},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:18},
                                End:      ast.Location{Line:1, Column:23},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:15},
                                End:      ast.Location{Line:1, Column:17},
                                SourceID: 0,
                            },
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:18},
                            End:      ast.Location{Line:1, Column:23},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:31},
                        End:      ast.Location{Line:1, Column:36},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                Lifetime: &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:28},
                        End:      ast.Location{Line:1, Column:30},
                        SourceID: 0,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:31},
                    End:      ast.Location{Line:1, Column:36},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Throws: nil,
            Async:  false,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name:      "p",
                        Namespace: 0,
                        VarID:     0,
                        Source:    nil,
                        span:      ast.Span{
                            Start:    ast.Location{Line:1, Column:46},
                            End:      ast.Location{Line:1, Column:47},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:39},
                        End:      ast.Location{Line:1, Column:47},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:37},
                End:      ast.Location{Line:1, Column:49},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:49},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:49},
        SourceID: 0,
    },
}
---

[TestParseLifetimeAnnotations/FnTwoLifetimeParams - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "first",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:9},
                SourceID: 0,
            },
        },
        VarID:   0,
        FuncSig: ast.FuncSig{
            LifetimeParams: {
                &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:12},
                        SourceID: 0,
                    },
                },
                &ast.LifetimeAnn{
                    Name: "b",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:14},
                        End:      ast.Location{Line:1, Column:16},
                        SourceID: 0,
                    },
                },
            },
            TypeParams: nil,
            Params:     {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "a",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:18},
                            End:      ast.Location{Line:1, Column:19},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:28},
                                    End:      ast.Location{Line:1, Column:33},
                                    SourceID: 0,
                                },
                            },
                            TypeArgs: {
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:25},
                                    End:      ast.Location{Line:1, Column:27},
                                    SourceID: 0,
                                },
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:28},
                                End:      ast.Location{Line:1, Column:33},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:28},
                            End:      ast.Location{Line:1, Column:33},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "b",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:35},
                            End:      ast.Location{Line:1, Column:36},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:45},
                                    End:      ast.Location{Line:1, Column:50},
                                    SourceID: 0,
                                },
                            },
                            TypeArgs: {
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "b",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:42},
                                    End:      ast.Location{Line:1, Column:44},
                                    SourceID: 0,
                                },
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:45},
                                End:      ast.Location{Line:1, Column:50},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:45},
                            End:      ast.Location{Line:1, Column:50},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:62},
                            End:      ast.Location{Line:1, Column:67},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:59},
                            End:      ast.Location{Line:1, Column:61},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:62},
                        End:      ast.Location{Line:1, Column:67},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:62},
                    End:      ast.Location{Line:1, Column:67},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Throws: nil,
            Async:  false,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name:      "a",
                        Namespace: 0,
                        VarID:     0,
                        Source:    nil,
                        span:      ast.Span{
                            Start:    ast.Location{Line:1, Column:77},
                            End:      ast.Location{Line:1, Column:78},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:70},
                        End:      ast.Location{Line:1, Column:78},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:68},
                End:      ast.Location{Line:1, Column:80},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:80},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:80},
        SourceID: 0,
    },
}
---

[TestParseLifetimeAnnotations/FnSingleLifetimeParam - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "identity",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:12},
                SourceID: 0,
            },
        },
        VarID:   0,
        FuncSig: ast.FuncSig{
            LifetimeParams: {
                &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:15},
                        SourceID: 0,
                    },
                },
            },
            TypeParams: nil,
            Params:     {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "p",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.MutableTypeAnn{
                        Target: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "Point",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:27},
                                    End:      ast.Location{Line:1, Column:32},
                                    SourceID: 0,
                                },
                            },
                            TypeArgs: {
                            },
                            Lifetime: &ast.LifetimeAnn{
                                Name: "a",
                                span: ast.Span{
                                    Start:    ast.Location{Line:1, Column:24},
                                    End:      ast.Location{Line:1, Column:26},
                                    SourceID: 0,
                                },
                            },
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:27},
                                End:      ast.Location{Line:1, Column:32},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:27},
                            End:      ast.Location{Line:1, Column:32},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
            },
            Return: &ast.MutableTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:44},
                            End:      ast.Location{Line:1, Column:49},
                            SourceID: 0,
                        },
                    },
                    TypeArgs: {
                    },
                    Lifetime: &ast.LifetimeAnn{
                        Name: "a",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:41},
                            End:      ast.Location{Line:1, Column:43},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:44},
                        End:      ast.Location{Line:1, Column:49},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:44},
                    End:      ast.Location{Line:1, Column:49},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Throws: nil,
            Async:  false,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name:      "p",
                        Namespace: 0,
                        VarID:     0,
                        Source:    nil,
                        span:      ast.Span{
                            Start:    ast.Location{Line:1, Column:59},
                            End:      ast.Location{Line:1, Column:60},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:52},
                        End:      ast.Location{Line:1, Column:60},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:50},
                End:      ast.Location{Line:1, Column:62},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:62},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:62},
        SourceID: 0,
    },
}
---

[TestParseLifetimeAnnotations/FnReturnLifetimeUnion - 1]
&ast.DeclStmt{
    Decl: &ast.FuncDecl{
        Name: &ast.Ident{
            Name: "pick",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:4},
                End:      ast.Location{Line:1, Column:8},
                SourceID: 0,
            },
        },
        VarID:   0,
        FuncSig: ast.FuncSig{
            LifetimeParams: {
                &ast.LifetimeAnn{
                    Name: "a",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:11},
                        SourceID: 0,
                    },
                },
                &ast.LifetimeAnn{
                    Name: "b",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:15},
                        SourceID: 0,
                    },
                },
            },
            TypeParams: nil,
            Params:     {
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "a",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:23},
                                End:      ast.Location{Line:1, Column:28},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "a",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:20},
                                End:      ast.Location{Line:1, Column:22},
                                SourceID: 0,
                            },
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:23},
                            End:      ast.Location{Line:1, Column:28},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "b",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:30},
                            End:      ast.Location{Line:1, Column:31},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "Point",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:36},
                                End:      ast.Location{Line:1, Column:41},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: {
                        },
                        Lifetime: &ast.LifetimeAnn{
                            Name: "b",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:33},
                                End:      ast.Location{Line:1, Column:35},
                                SourceID: 0,
                            },
                        },
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:36},
                            End:      ast.Location{Line:1, Column:41},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name:    "cond",
                        VarID:   0,
                        TypeAnn: nil,
                        Default: nil,
                        span:    ast.Span{
                            Start:    ast.Location{Line:1, Column:43},
                            End:      ast.Location{Line:1, Column:47},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    Optional: false,
                    TypeAnn:  &ast.BooleanTypeAnn{
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:49},
                            End:      ast.Location{Line:1, Column:56},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                },
            },
            Return: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:71},
                        End:      ast.Location{Line:1, Column:76},
                        SourceID: 0,
                    },
                },
                TypeArgs: {
                },
                Lifetime: &ast.LifetimeUnionAnn{
                    Lifetimes: {
                        &ast.LifetimeAnn{
                            Name: "a",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:62},
                                End:      ast.Location{Line:1, Column:64},
                                SourceID: 0,
                            },
                        },
                        &ast.LifetimeAnn{
                            Name: "b",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:67},
                                End:      ast.Location{Line:1, Column:69},
                                SourceID: 0,
                            },
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:61},
                        End:      ast.Location{Line:1, Column:70},
                        SourceID: 0,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:71},
                    End:      ast.Location{Line:1, Column:76},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Throws: nil,
            Async:  false,
        },
        Body: &ast.Block{
            Stmts: {
                &ast.ReturnStmt{
                    Expr: &ast.IdentExpr{
                        Name:      "a",
                        Namespace: 0,
                        VarID:     0,
                        Source:    nil,
                        span:      ast.Span{
                            Start:    ast.Location{Line:1, Column:86},
                            End:      ast.Location{Line:1, Column:87},
                            SourceID: 0,
                        },
                        inferredType: nil,
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:79},
                        End:      ast.Location{Line:1, Column:87},
                        SourceID: 0,
                    },
                },
            },
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:77},
                End:      ast.Location{Line:1, Column:89},
                SourceID: 0,
            },
        },
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:89},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:89},
        SourceID: 0,
    },
}
---

[TestParseImmutableClass/ImmutableClass - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Config",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:17},
                End:      ast.Location{Line:1, Column:23},
                SourceID: 0,
            },
        },
        TypeParams: nil,
        Extends:    (*ast.TypeRefTypeAnn)(nil),
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "host",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:1, Column:24},
                        End:      ast.Location{Line:1, Column:28},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.StringTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:30},
                        End:      ast.Location{Line:1, Column:36},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Body: {
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "host",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:40},
                        End:      ast.Location{Line:1, Column:44},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:1, Column:40},
                    End:      ast.Location{Line:1, Column:44},
                    SourceID: 0,
                },
            },
        },
        Immutable: true,
        export:    false,
        declare:   false,
        span:      ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:47},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:47},
        SourceID: 0,
    },
}
---

[TestParseImmutableClass/RegularClass - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Point",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:7},
                End:      ast.Location{Line:1, Column:12},
                SourceID: 0,
            },
        },
        TypeParams: nil,
        Extends:    (*ast.TypeRefTypeAnn)(nil),
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "x",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:14},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.NumberTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:22},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "y",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:1, Column:24},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.NumberTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:27},
                        End:      ast.Location{Line:1, Column:33},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Body: {
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "x",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:37},
                        End:      ast.Location{Line:1, Column:38},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:1, Column:37},
                    End:      ast.Location{Line:1, Column:38},
                    SourceID: 0,
                },
            },
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "y",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:40},
                        End:      ast.Location{Line:1, Column:41},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:1, Column:40},
                    End:      ast.Location{Line:1, Column:41},
                    SourceID: 0,
                },
            },
        },
        Immutable: false,
        export:    false,
        declare:   false,
        span:      ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:44},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:44},
        SourceID: 0,
    },
}
---

[TestParseImmutableClass/ImmutableClassWithMutSelfMethod - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Config",
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:21},
                End:      ast.Location{Line:2, Column:27},
                SourceID: 0,
            },
        },
        TypeParams: nil,
        Extends:    (*ast.TypeRefTypeAnn)(nil),
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "host",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:2, Column:28},
                        End:      ast.Location{Line:2, Column:32},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.StringTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:34},
                        End:      ast.Location{Line:2, Column:40},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Body: {
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "host",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:3, Column:6},
                        End:      ast.Location{Line:3, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:3, Column:6},
                    End:      ast.Location{Line:3, Column:10},
                    SourceID: 0,
                },
            },
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name:      "setHost",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:4, Column:6},
                        End:      ast.Location{Line:4, Column:13},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: nil,
                        TypeParams:     nil,
                        Params:         {
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name:    "h",
                                    VarID:   0,
                                    TypeAnn: nil,
                                    Default: nil,
                                    span:    ast.Span{
                                        Start:    ast.Location{Line:4, Column:24},
                                        End:      ast.Location{Line:4, Column:25},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                Optional: false,
                                TypeAnn:  &ast.StringTypeAnn{
                                    span: ast.Span{
                                        Start:    ast.Location{Line:4, Column:27},
                                        End:      ast.Location{Line:4, Column:33},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                            },
                        },
                        Return: &ast.VoidTypeAnn{
                            span: ast.Span{
                                Start:    ast.Location{Line:4, Column:38},
                                End:      ast.Location{Line:4, Column:42},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        Throws: nil,
                        Async:  false,
                    },
                    Body: &ast.Block{
                        Stmts: {
                        },
                        Span: ast.Span{
                            Start:    ast.Location{Line:4, Column:43},
                            End:      ast.Location{Line:4, Column:45},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:4, Column:6},
                        End:      ast.Location{Line:4, Column:45},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                MutSelf: &bool(true),
                Static:  false,
                Private: false,
                Span_:   ast.Span{
                    Start:    ast.Location{Line:4, Column:6},
                    End:      ast.Location{Line:4, Column:45},
                    SourceID: 0,
                },
            },
        },
        Immutable: true,
        export:    false,
        declare:   false,
        span:      ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:5, Column:6},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:5, Column:6},
        SourceID: 0,
    },
}
---

[TestParseDataClass/DataClass - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Config",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:12},
                End:      ast.Location{Line:1, Column:18},
                SourceID: 0,
            },
        },
        TypeParams: nil,
        Extends:    (*ast.TypeRefTypeAnn)(nil),
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "host",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:1, Column:19},
                        End:      ast.Location{Line:1, Column:23},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.StringTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:25},
                        End:      ast.Location{Line:1, Column:31},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Body: {
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "host",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:35},
                        End:      ast.Location{Line:1, Column:39},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:1, Column:35},
                    End:      ast.Location{Line:1, Column:39},
                    SourceID: 0,
                },
            },
        },
        Data:    true,
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:42},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:42},
        SourceID: 0,
    },
}
---

[TestParseDataClass/RegularClass - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Point",
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:7},
                End:      ast.Location{Line:1, Column:12},
                SourceID: 0,
            },
        },
        TypeParams: nil,
        Extends:    (*ast.TypeRefTypeAnn)(nil),
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "x",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:14},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.NumberTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:22},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "y",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:1, Column:24},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.NumberTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:27},
                        End:      ast.Location{Line:1, Column:33},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Body: {
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "x",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:37},
                        End:      ast.Location{Line:1, Column:38},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:1, Column:37},
                    End:      ast.Location{Line:1, Column:38},
                    SourceID: 0,
                },
            },
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "y",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:1, Column:40},
                        End:      ast.Location{Line:1, Column:41},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:1, Column:40},
                    End:      ast.Location{Line:1, Column:41},
                    SourceID: 0,
                },
            },
        },
        Data:    false,
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:1, Column:1},
            End:      ast.Location{Line:1, Column:44},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:44},
        SourceID: 0,
    },
}
---

[TestParseDataClass/DataClassWithMutSelfMethod - 1]
&ast.DeclStmt{
    Decl: &ast.ClassDecl{
        Name: &ast.Ident{
            Name: "Config",
            span: ast.Span{
                Start:    ast.Location{Line:2, Column:16},
                End:      ast.Location{Line:2, Column:22},
                SourceID: 0,
            },
        },
        TypeParams: nil,
        Extends:    (*ast.TypeRefTypeAnn)(nil),
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "host",
                    VarID:   0,
                    TypeAnn: nil,
                    Default: nil,
                    span:    ast.Span{
                        Start:    ast.Location{Line:2, Column:23},
                        End:      ast.Location{Line:2, Column:27},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  &ast.StringTypeAnn{
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:29},
                        End:      ast.Location{Line:2, Column:35},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
            },
        },
        Body: {
            &ast.FieldElem{
                Name: &ast.IdentExpr{
                    Name:      "host",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:3, Column:6},
                        End:      ast.Location{Line:3, Column:10},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Value:    nil,
                Type:     nil,
                Default:  nil,
                Static:   false,
                Private:  false,
                Readonly: false,
                Span_:    ast.Span{
                    Start:    ast.Location{Line:3, Column:6},
                    End:      ast.Location{Line:3, Column:10},
                    SourceID: 0,
                },
            },
            &ast.MethodElem{
                Name: &ast.IdentExpr{
                    Name:      "setHost",
                    Namespace: 0,
                    VarID:     0,
                    Source:    nil,
                    span:      ast.Span{
                        Start:    ast.Location{Line:4, Column:6},
                        End:      ast.Location{Line:4, Column:13},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                Fn: &ast.FuncExpr{
                    FuncSig: ast.FuncSig{
                        LifetimeParams: nil,
                        TypeParams:     nil,
                        Params:         {
                            &ast.Param{
                                Pattern: &ast.IdentPat{
                                    Name:    "h",
                                    VarID:   0,
                                    TypeAnn: nil,
                                    Default: nil,
                                    span:    ast.Span{
                                        Start:    ast.Location{Line:4, Column:24},
                                        End:      ast.Location{Line:4, Column:25},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                Optional: false,
                                TypeAnn:  &ast.StringTypeAnn{
                                    span: ast.Span{
                                        Start:    ast.Location{Line:4, Column:27},
                                        End:      ast.Location{Line:4, Column:33},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                            },
                        },
                        Return: &ast.VoidTypeAnn{
                            span: ast.Span{
                                Start:    ast.Location{Line:4, Column:38},
                                End:      ast.Location{Line:4, Column:42},
                                SourceID: 0,
                            },
                            inferredType: nil,
                        },
                        Throws: nil,
                        Async:  false,
                    },
                    Body: &ast.Block{
                        Stmts: {
                        },
                        Span: ast.Span{
                            Start:    ast.Location{Line:4, Column:43},
                            End:      ast.Location{Line:4, Column:45},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:4, Column:6},
                        End:      ast.Location{Line:4, Column:45},
                        SourceID: 0,
                    },
                    inferredType: nil,
                },
                MutSelf: &bool(true),
                Static:  false,
                Private: false,
                Span_:   ast.Span{
                    Start:    ast.Location{Line:4, Column:6},
                    End:      ast.Location{Line:4, Column:45},
                    SourceID: 0,
                },
            },
        },
        Data:    true,
        export:  false,
        declare: false,
        span:    ast.Span{
            Start:    ast.Location{Line:2, Column:5},
            End:      ast.Location{Line:5, Column:6},
            SourceID: 0,
        },
        provenance: nil,
    },
    span: ast.Span{
        Start:    ast.Location{Line:2, Column:5},
        End:      ast.Location{Line:5, Column:6},
        SourceID: 0,
    },
}
---
